--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@ body {
 /* ----- WELCOME BANNER ----- */
 header {
   text-align: center;
-  margin: 200px 0 300px 0;
+  margin: 200px auto 400px;
   padding: 100px 30px 50px 30px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+  max-width: 1200px;
 }
 
 header h1,
@@ -41,7 +42,7 @@ header p {
 .header-icon {
   width: 100px;
   position: absolute;
-  top: 50px;
+  top: 90px;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0.9;
@@ -58,6 +59,7 @@ header p {
   cursor: pointer;
   border-radius: 10px;
   margin-top: 80px;
+  margin-bottom: 25px;
   transition: background-color 0.3s ease, transform 0.2s ease;
   font-family: "Exo 2", sans-serif;
 }
@@ -80,20 +82,22 @@ h2 {
   margin: 10px 0px 20px;
 }
 
-/* ----- SECTION BORDERS ----- */
+/* ----- SECTIONS ----- */
 .solar-system-overview,
 .planets,
 .moons,
 .solar-system-objects {
-  border-radius: 10px;
+  max-width: 1260px;
+  margin: 0 auto 70px;
   padding: 20px;
-  margin: 45px 0;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.6);
+  box-sizing: border-box;
 }
 
 .solar-system-overview p {
